# abstract-dao

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: deploy-dev.yml  deploy-tag.yml  pull-request.yml  release-please.yml
.release-please/: config.json
src/: constants.rs  helpers.rs  lib.rs  primitives.rs
tests/: common.rs  get_signature_on_multiple_chains.rs
tests/res/: mpc_contract.wasm
