[package]
description = "cargo-near-new-project-description"
edition = "2021"
name = "near_eth_tx"
version = "0.1.0"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethers-core = { version = "2.0.14", default-features = false }
near-sdk = "5.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["custom"]}

[dev-dependencies]
near-sdk = {version = "5.1.0", features = ["unit-testing"]}
near-workspaces = {version = "0.10.0", features = ["unstable"]}
serde_json = "1"
tokio = {version = "1.12.0", features = ["full"]}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
