[package]
description = "Abstract DAO brings Chain Abstraction for multiple chains"
edition = "2021"
name = "near_abstract_dao"
version = "0.3.0"
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/nearuaguild/abstract-dao"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethers-contract = { version = "2.0.14", default-features = false }
ethers-core = { version = "2.0.14", default-features = false }
near-sdk = "5.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dev-dependencies]
near-sdk = { version = "5.3.0", features = ["unit-testing"] }
